testsuite/poke.pkl/acons-diag-6.pk
/* { dg-do compile } */

type Array = struct {};

var a
  = Array (); /* { dg-error "expected array type" } */
